--- a/index.html
+++ b/index.html
@@ -676,5 +676,8 @@
             <p>Tsunade's Medical Expertise</p>
         </div>
     </section>
+
+    <script async="async" data-cfasync="false" src="https://pl28463644.effectivegatecpm.com/8f301826c8195c640023551743c64913/invoke.js"></script>
+<div id="container-8f301826c8195c640023551743c64913"></div>
 </body>
 </html>
